# gtfold

./: .gitignore  CMakeLists.txt  CMakeRunUnitTests.cmake  CTestTestfile.cmake  README-CMAKE.md
Examples/: ecoli.ct  ecoli.energy  ecoli.txt  ecoli_output.txt
GTFoldCMakeBuild/: CMakeLists.txt-clang-macos10.14-office  CMakeLists.txt-linux-unix-g++  CMakeRunUnitTests.cmake  GenerateThermoParamsConfigHeader.sh
gtfold-mfe/include/: AdvancedDouble.h  ThermoConfig.h.in  global.h  loader.h  main.h  options.h  partition-func-d2.h  stochastic-sampling-d2.h  stochastic-sampling.h  subopt_traceback.h  traceback.h
gtfold-mfe/src/: boltzmann_main.cc  constraints.cc  global.cc  loader.cc  main.cc  mfe_main.cc  options.cc  pf-shel-check.cc  random-sample.cc  shapereader.cc  stochastic-sampling.cc  subopt_main.cc  subopt_traceback.cc  utils.cc
gtfold-mfe/src/binexe-utils/: calc_pnum.cc  limitCDboltzmanntest.cc  main.cc  test_ss_constraint.c
